# robosub2022

./: .gitignore  Dockerfile  README.md  build.sh  db.sh  dr.sh  gate.cpp  launch_file.yaml  mavros_param.yaml  start.py  start.sh  start_mavros.sh  test.sh
brain/: CMakeLists.txt  package.xml
brain/src/: publisher.cpp  state_machine.cpp
copy_robosub22src/camera/: .CMakeLists.txt.swp
copy_robosub22src/src/brain/src/: .brain.cpp.swp  README.md  publisher.cpp
copy_robosub22src/src/test/src/: test_node.cpp
copy_robosub22src/sub/: CMakeLists.txt
include/: common.h  ts_queue.h
launch_files/: brain.yaml  camera.yaml  main.yaml  mavros.yaml  test.yaml
scripts/: build.sh  build_lur.sh  build_test.sh  dj.sh  mavros.sh  test.sh
src/brain/: CMakeLists.txt  package.xml
src/brain/include/brain/: event_queue.h  qual.h  state_machine.h
src/brain/src/: brain.cc  brain.cpp  brain_node.cpp  event_queue.cpp  publisher.cpp  qual.cpp  state_machine.cpp  subscriber.cpp  thread_safe_queue.cpp
src/camera/: CMakeLists.txt  package.xml
src/camera/src/: camera_node.cpp
src/lur_pkg/: CMakeLists.txt  package.xml
src/lur_pkg/include/lur_pkg/: common.h  ts_queue.h
src/lur_pkg/msg/: Cam.msg
src/src/brain/: CMakeLists.txt
src/src/brain/include/brain/: event_queue.h  movement.h  state_machine.h
src/src/brain/src/: brain.cpp  event_queue.cpp
src/src/camera/: CMakeLists.txt  package.xml
src/src/camera/src/: camera_node.cpp
src/sub/: CMakeLists.txt  package.xml
src/sub/src/: movement.cpp
src/test/: CMakeLists.txt
src/test/src/: man_test.txt  test_node.cpp
sub/: CMakeLists.txt  package.xml
test/src/: test_node.cpp
